# Monorepo_proj

./: .coverage  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  mypy.ini  pyproject.toml
.github/: dependabot.yml
.github/workflows/: build.yml  ci.yml  deploy.yml
libs/models/: Dockerfile  pyproject.toml
libs/models/src/models/: ml_processor.py
libs/utils/: Dockerfile  Makefile  pyproject.toml
libs/utils/src/utils/: api_client.py  env_loader.py  logger.py  weather_logic.py
services/ai_service/: Dockerfile  Makefile  pyproject.toml
services/ai_service/src/ai_service/: ml_main.py
services/ai_service/src/ai_service/api/endpoints/: ai.py
services/ai_service/tests/: test_ai.py
services/weather_service/: Dockerfile  Makefile  pyproject.toml
services/weather_service/src/weather_service/: main.py
services/weather_service/src/weather_service/api/endpoints/: weather.py
services/weather_service/src/weather_service/core/: config.py
services/weather_service/src/weather_service/db/: base.py  models.py  session.py
services/weather_service/tests/: test_weather.py
tests/: test_integration.py
