[tool.poetry]
name = "weather_service"
version = "0.1.0"
description = "Weather service for the monorepo"
authors = ["Kuldeep <kulsss@egmail.com>"]
packages = [{ include = "weather_service", from = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115"
sqlalchemy = "^2.0"
uvicorn = "^0.22.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
mypy = "^1.0"
black = "^23.1"
isort = "^5.12"
pylint = "^2.17"
pre-commit = "^3.3"

[tool.mypy]
plugins = ["sqlalchemy.ext.mypy.plugin"]
